# python-project-lvl1

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: 4th task.yml
brain_games/: cli.py  task5_code.py  task6_code.py  task7_code.py  task8_code.py  task9_code.py  templates.py  vit_even.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_gsd.py  brain_prime.py  brain_progression.py
